--- a/countdown-timer/style.css
+++ b/countdown-timer/style.css
@@ -1,11 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap");
 
-* {
+*{
     box-sizing: border-box;
 }
 
-body {
-    background-image: url("./snow.jpg");
+body{
+    background-image: url('./snow.jpg');
     background-size: cover;
     background-position: center center;
     display: flex;
@@ -16,13 +16,13 @@ body {
     margin: 0;
 }
 
-h1 {
+h1{
     font-weight: normal;
     font-size: 4rem;
     margin-top: 5rem;
 }
 
-.countdown-container {
+.countdown-container{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -34,7 +34,6 @@ h1 {
     line-height: 1;
     margin: 1rem 2rem;
 }
-
 .countdown-el {
     text-align: center;
 }
